# cmd-guard

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  configure-settings.sh
.github/workflows/: ci.yml  release.yml
formula/: cmd-guard.rb
src/: main.rs
tests/: integration.rs
