[package]
name = "cmd-guard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A fast, compiled PreToolUse hook for Claude Code that intercepts dangerous shell commands"
license = "MIT"
repository = "https://github.com/redodson01/cmd-guard"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dev-dependencies]
tempfile = "3.27.0"
